# icp-chopstick-game

./: Cargo.toml  README.md  dfx.json
src/icp_chopstick_backend/: Cargo.toml  icp_chopstick_backend.did
src/icp_chopstick_backend/src/: lib.rs  rand.rs
