[package]
name = "icp_chopstick_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

candid = "0.10.3"
ic-cdk = "0.12.1"
ic-cdk-timers = "0.6.0"
ic-stable-structures = "0.6.2"
serde = "1.0.132"
ic-cdk-macros = "0.8.1"
candid-extractor = "0.1.2"
#uuid = {version="1.7.0",features=["v4"]}
imp = "0.1.0"
tiny-bip39 = "0.7.3"
wasm-bindgen = "0.2.92"
serde_json = "1.0.93"